# oa-PubRouter-App

./: .flaskenv  .gitignore  .gitmodules  .snyk  MANIFEST.in  README.md  VERSION  archive_git_repos_as_zips.sh  pyproject.toml  requirements.txt  requirements_4_testing.txt  router-diagrams.pptx
deployment/: README.md  etc_sudoers-d_jenkins  supervisord.conf
deployment/harvester/: harvester.conf
deployment/jper/: README.md  jper.conf  jper_nginx
deployment/scheduler/: scheduler.conf
deployment/scheduler-ftp/: README.md
deployment/shellscripts/: README.md  checkFtpSessionExists.sh  checkUserExists.sh  createFTPuser.sh  deleteFTPuser.sh  delete_files.sh  delete_old_ftp_files.sh  kill_sftp.sh  moveAtyponFTPfiles.sh  moveFTPfiles.sh
deployment/store/: delete_files.sh_NOTUSED  delete_old_local_store.sh_NOTUSED  delete_old_store.cron_NOTUSED  delete_old_store.sh_NOTUSED  delete_old_temp_store.sh_NOTUSED  jper_nginx  store.conf  store_gconf.py  supervisord.conf
deployment/sword-in/: README.md  sword-in.conf  sword-in_gconf.py
deployment/sword-out/: sword-out.conf
deployment/xapi/: README.md  gconf.py  xapi.conf  xapi_nginx
deployment/xweb/: README.md  gconf.py  xweb.conf  xweb_nginx
docs/: AWS_infrastructure.md  Architecture.md  Build_Deployment.md  Configuration.md  Database.md  Development_guidelines.md  Git_repos.md  Misc_Functionality.md  Scheduling.md  Server_Installation.md  Server_admin.md  Windows_development_env.md  jper-mysql-datamodel.mwb  jper-mysql-datamodel.mwb.bak
docs/sword-out/: MODELS.md  README.md  RepositorySwordDataModel.md  SwordDepositRecord.md
jenkins/: jenkins_build.sh  jenkins_deployment.sh
scripts/: README.md  analyse_xml_in_store.py  analysis_notifications_aff_org_values.py  auto_check_folders.sh  create_admin_user.py  create_dev_db.py  create_publisher_dirs.py  describe_bit_value.py  describe_diff_dict.py  dump_match_params_separate_institution_files.py  examine_xml.py  jper_scheduler  list_match_params_name_variants_regex.py  list_users_csv.py  purge_job_table.py  remove_matching_param_redundancies.py  report_all_note_analyse_types.py  report_all_note_provider_aff_usage.py  rerun_reports  run_harvester_now  run_xml_file_through_pub_testing.py  send_test_zip_pkg.py  send_test_zip_pkg.sh
scripts/MySQL_queries/: publisher_duplicate_file_submissions.sql
scripts/Release_12.10/: adjust_account_table.sql
scripts/Release_12.12/: adjust_acc_note_emails.sql  create_acc_bulk_email.sql
scripts/Release_12.9/: create_metrics_table.sql
scripts/Release_13.3/: doi_register_ddl.sql  update_modified_doi_register.py
scripts/Release_13.4/: update_metrics_table.sql  update_modified_doi_register_table.py  update_modified_notification_table.py
scripts/Release_13.5/: change_acc_repo_match_params_table.py  create_job_table.sql
scripts/Release_13.7/: modify_metric_recs.sql
scripts/Release_13.8/: update_accounts_table.sql
scripts/Testing/: _testing_new_schedule_app1.py  _testing_new_schedule_app2.py  run_send_test_sword_deposit.py  send_test_sword_deposit.py
scripts/release_12.0/: fix_migrate_from_es_to_mysql.py  (+2 more)
tests/: coverage_tests.ini  coverage_tests.py
(+403 files in other folders)
